--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
-	"name": "note-taker",
-	"version": "1.0.0",
-	"description": "",
-	"main": "server.js",
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"author": "",
-	"license": "ISC",
-	"dependencies": {
-		"express": "^4.16.4",
-		"fs": "0.0.1-security",
-		"path": "^0.12.7"
-	}
+  "name": "note-taker",
+  "version": "1.0.0",
+  "engines": {
+    "node": "12.x"
+  },
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1",
+    "fs": "0.0.1-security",
+    "http": "0.0.0",
+    "mysql": "^2.17.1",
+    "path": "^0.12.7"
+  },
+  "description": ""
 }
